--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,10 @@ jobs:
       - run: npm test
       - uses: codecov/codecov-action@v3
         with:
+          flags: unittests
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      - run: npm run integration-ci
       - name: Semantic Release (Dry Run)
         run: npm run semantic-release-dry
         env:
